# quic-p2p

./: .gitignore  CMakeLists.txt  README.md
docs/: iroh_p2p_holepunch_flow.md
scripts/: README.md  build_xquic.sh  coturn.conf  deploy_local.sh  gen_ssl_cert.sh  install_babassl.sh  run_client.sh  run_coturn.sh  run_peer.sh  run_signaling.sh
src/client/: main.c
src/common/: run.c  run.h  signal.h  xquic_ice.c  xquic_ice.h
src/peer/: main.c
src/sample_libjuice/: README.md  coturn.conf.example
src/sample_libjuice/client/: main.c
src/sample_libjuice/common/: run.c  run.h  signal.c  signal.h
src/sample_libjuice/peer/: main.c
src/sample_libjuice/signaling/: config.yaml.example  go.mod  go.sum
src/sample_libjuice/signaling/cmd/server/: main.go
src/sample_libjuice/signaling/internal/config/: config.go
src/sample_libjuice/signaling/internal/room/: room.go
src/sample_libjuice/signaling/internal/transport/: transport.go  websocket.go
